			SWI-Prolog ChangeLog
			====================

					--------------------------------------
					NOTE: Bug #<N> refers to bugs reported
					to the SWI-Prolog Bugzilla system at
					http://gollem.swi.psy.uva.nl/bugzilla/
					--------------------------------------

  * FIXED: Avoid wakeup in tracer, portray, event-hooks and interrupts.
    Fixes problems reported by Hugo Ferreira and Tom Schrijvers.

  * FIXED: Attribute wakeup in functor(-,+,+).  Spotted by Jon Sneyers.

  * ADDED: PL_query() option PL_QUERY_ENCODING to synchronise default
    encoding towards XPCE.

  * ADDED: library(unicode/blocks): naming of the various unicode code
    blocks.

  * FIXED: Parsing numbers with 0-base written as 00'...  Anjo Anjewierden.

  * ADDED: PL_new_atom_wchars() and PL_atom_wchars() for create/fetch
    text from a wide-character atom.


VERSION 5.5.2 (December 23, 2004)
=================================

  * FIXED: Bug#216: Random() name conflict with MacOS libraries. 
    Helmar Spangenberg.

  * FIXED: Bug#215: Encoding documentation issues.  Holger Kanwischer.


VERSION 5.5.1 (December 17, 2004)
=================================

  * FIXED: Protocol issues due to wide character encoding.

  * MODIFIED: Cleanup of foreign predicate registration by Salvador
    Fandio.  Added PL_register_foreign_in_module() and
    PL_register_extensions_in_module().  Deleted the possibility to
    use PL_register_foreign("module:predicate", ...).  Foreign code
    using this construct must be updated.

  * ADDED: clp(r): Constraint Logic Programming over Reals.  Leslie De
    Koninck, K.U. Leuven supervised by Tom Schrijvers and Bart Demoen.

  * FIXED: error handling issues when running out of virtual memory due
    to creating too many threads.  Steve Moyle.

  * FIXED: Several issues with recursive mutexes in Windows, leading to
    errors in stream closing (Bug#211) and wrong error messages when dealing
    with Prolog-level mutexes.
