@@ -137,6 +137,7 @@ suggest predicates from a keyword.
 \predicatesummary{copy_stream_data}{2}{Copy all data from stream to stream}
 \predicatesummary{copy_stream_data}{3}{Copy n bytes from stream to stream}
 \predicatesummary{copy_term}{2}{Make a copy of a term}
+\predicatesummary{copy_term_nat}{2}{Make a copy of a term without attributes}
 \predicatesummary{current_arithmetic_function}{1}{Examine evaluable functions}
 \predicatesummary{current_atom}{1}{Examine existing atoms}
 \predicatesummary{current_blob}{2}{Examine typed blobs}
